Adds redacted by NLJUG slide

--- a/2018-11-08-jfall/index.html
+++ b/2018-11-08-jfall/index.html
@@ -228,6 +228,13 @@ About me 🤓
 <h1>Emoji</h1>
 <p>Rating: 🎉</p>
 </section>
+<section id="redacted-by-nljug" class="slide level1">
+<h1>Redacted by NLJUG</h1>
+<p><img data-src="images/jfall-program.jpg" /></p>
+<div class="fragment">
+<h2 id="section-3">☠️💣💥</h2>
+</div>
+</section>
 <section id="hash-code" class="slide level1">
 <h1>Hash-code</h1>
 <blockquote>
@@ -378,7 +385,7 @@ WARNING: All illegal access operations will be denied in a future release</code>
 <p>into generating bytecode</p>
 <p>that does something else</p>
 </section>
-<section id="section-3" class="slide level1" data-background-image="images/boring.jpg">
+<section id="section-4" class="slide level1" data-background-image="images/boring.jpg">
 <h1></h1>
 <p><br/><br/><br/><br/><br/></p>
 <h1>
@@ -425,7 +432,7 @@ Boring
 <section id="confusing-card-game" class="slide level1">
 <h1>Confusing card game</h1>
 </section>
-<section id="section-4" class="slide level1" data-background-image="images/tarot.jpg">
+<section id="section-5" class="slide level1" data-background-image="images/tarot.jpg">
 <h1></h1>
 </section>
 <section id="confusing-card-game-1" class="slide level1">
@@ -492,10 +499,10 @@ Rating:
 😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱
 </h1>
 </section>
-<section id="section-5" class="slide level1">
+<section id="section-6" class="slide level1">
 <h1>&lt;/&gt;</h1>
 </section>
-<section id="section-6" class="slide level1" data-background-image="images/ribbon.jpg">
+<section id="section-7" class="slide level1" data-background-image="images/ribbon.jpg">
 <h1></h1>
 <h1>
 Awareness
@@ -533,7 +540,7 @@ WARNING: All illegal access operations will be denied in a future release</code>
 <h1>Do try this at home!</h1>
 <p>Maybe not at work though?</p>
 </section>
-<section id="section-7" class="slide level1">
+<section id="section-8" class="slide level1">
 <h1>☠️💣💥</h1>
 <p>Please rate my talk in the official J-Fall app!</p>
 <p><br/><br/><br/></p>
