Adds slides about architecture to Uncle Bob delivery

--- a/2019-02-08-uncle-bob-utrecht/index.html
+++ b/2019-02-08-uncle-bob-utrecht/index.html
@@ -113,8 +113,8 @@ About me
 </h1>
 <p>Jan Ouwens</p>
 <p><img data-src="images/twitter.png" /> <a href="https://twitter.com/jqno">jqno</a></p>
-<p><br><br></p>
-<p><img data-src="images/codestar.png" /></p>
+<p><br></p>
+<p>Architect at<br><img data-src="images/codestar.png" /></p>
 </section>
 <section id="equalsverifier" class="slide level1">
 <h1>EqualsVerifier</h1>
@@ -131,8 +131,34 @@ About me
 <section id="section-1" class="slide level1" data-background-image="images/evil.jpg">
 <h1></h1>
 </section>
-<section id="things-you-shouldnt-mess-with" class="slide level1">
-<h1>Things you shouldn’t mess with:</h1>
+<section id="section-2" class="slide level1" data-background-image="images/background.jpg">
+<h1></h1>
+<h1>
+The number one way to annoy your coworkers
+</h1>
+</section>
+<section id="section-3" class="slide level1" data-background-image="images/flowchart.jpg">
+<h1></h1>
+</section>
+<section id="section-4" class="slide level1" data-background-image="images/flowchart-blurred.jpg">
+<h1></h1>
+<h1>
+Become an architect
+</h1>
+<div class="fragment">
+<ul>
+<li>“No time” to write code</li>
+<li>Use PowerPoint and SharePoint</li>
+<li>Hold long meetings</li>
+<li>Don’t let people who disagree slow you down</li>
+</ul>
+<p><br><br><br></p>
+<p><small>(follow this advice and your influence and competence will correlate inversely 🎉)</small></p>
+</div>
+</section>
+<section id="otherwise" class="slide level1">
+<h1>Otherwise</h1>
+<p>Mess with</p>
 <ul>
 <li>Language ‘features’</li>
 <li>Reflection</li>
@@ -340,7 +366,7 @@ WARNING: All illegal access operations will be denied in a future release</code>
 <p>into generating bytecode</p>
 <p>that does something else</p>
 </section>
-<section id="section-2" class="slide level1" data-background-image="images/boring.jpg">
+<section id="section-5" class="slide level1" data-background-image="images/boring.jpg">
 <h1></h1>
 <p><br/><br/><br/><br/><br/></p>
 <h1>
@@ -387,7 +413,7 @@ Boring
 <section id="confusing-card-game" class="slide level1">
 <h1>Confusing card game</h1>
 </section>
-<section id="section-3" class="slide level1" data-background-image="images/tarot.jpg">
+<section id="section-6" class="slide level1" data-background-image="images/tarot.jpg">
 <h1></h1>
 </section>
 <section id="confusing-card-game-1" class="slide level1">
@@ -454,10 +480,10 @@ Rating:
 😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱😱
 </h1>
 </section>
-<section id="section-4" class="slide level1">
+<section id="section-7" class="slide level1">
 <h1>&lt;/&gt;</h1>
 </section>
-<section id="section-5" class="slide level1" data-background-image="images/ribbon.jpg">
+<section id="section-8" class="slide level1" data-background-image="images/ribbon.jpg">
 <h1></h1>
 <h1>
 Awareness
