Adjusts the flow for Java 17

--- a/2021-07-02-mendix/index.html
+++ b/2021-07-02-mendix/index.html
@@ -259,7 +259,20 @@ About me 🤓
 <p>Demo</p>
 </blockquote>
 </section>
+<section id="oh-man" class="slide level1">
+<h1>Oh man 😒</h1>
+<pre><code>Exception in thread &quot;main&quot; java.lang.reflect.InaccessibleObjectException: Unable to make field private final int java.lang.Integer.value accessible: module java.base does not &quot;opens java.lang&quot; to unnamed module @2a0a80c0</code></pre>
+<div class="fragment">
+<p><code>--add-opens java.base/java.lang=ALL-UNNAMED</code> --</p>
+</div>
+</section>
 <section id="loopy-1" class="slide level1">
+<h1>Loopy</h1>
+<blockquote>
+<p>Demo</p>
+</blockquote>
+</section>
+<section id="loopy-2" class="slide level1">
 <h1>Loopy</h1>
 <p>Was this hack evil? ✋</p>
 <div class="fragment">
@@ -269,7 +282,7 @@ About me 🤓
 <p>Are JPA entities evil? 👹</p>
 </div>
 </section>
-<section id="loopy-2" class="slide level1">
+<section id="loopy-3" class="slide level1">
 <h1>Loopy</h1>
 <p>Rating: ☠️💣💥</p>
 </section>
@@ -278,17 +291,6 @@ About me 🤓
 <blockquote>
 <p>Demo</p>
 </blockquote>
-</section>
-<section id="oh-man" class="slide level1">
-<h1>Oh man 😒</h1>
-<pre><code>WARNING: An illegal reflective access operation has occurred
-WARNING: Illegal reflective access by demos.reflection.Reflector (file:/Users/jqno/w/personal/dont-hack-the-platform-talk/target/classes/) to field java.lang.String.value
-WARNING: Please consider reporting this to the maintainers of demos.reflection.Reflector
-WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-WARNING: All illegal access operations will be denied in a future release</code></pre>
-<div class="fragment">
-<p><code>--add-opens java.base/java.lang=ALL-UNNAMED</code></p>
-</div>
 </section>
 <section id="interning-1" class="slide level1">
 <h1>Interning</h1>
